data/derived/fa15/progs/unify/prog3910.ml.out
Characters 71-90:
  let fixpointHelper f b = let c = f b in ( if c = b then (c, true) else fixpointHelper(f c));;
                                                                         ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type ('a -> 'a) * bool
